Added full package.json & bower.json. Also created the less and js files.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Bobs practice playground</title>
 	<!-- stylesheets -->
-	<link rel="stylesheet" href="css/main.css">
-	<!-- scripts -->
-	<script src="js/main.js"></script>
+	<link rel="stylesheet" href="build/css/main.min.css">
 </head>
 <body>
 	This here shall be my domain :)
+	<div class="wrapper">
+		
+	</div>
+
+
+
+	<!-- scripts -->
+	<script src="bower_components/jquery/jquery.min.js"></script>
+	<script src="bower_components/handlebars/handlebars.min.js"></script>
+	<script src="build/js/main.min.js"></script>
+	<!-- livereload -->
+	<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
