--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Bobs practice playground</title>
+	<title>Bob's practice playground</title>
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="build/css/main.min.css">
 </head>
 <body>
-	This here shall be my domain :)
+	<header>
+	</header>
 	<div class="wrapper">
-		
+		<div class="content">
+			<ul id="tooltip-list"></ul>
+			<div class="clear-both"></div>
+			<div class="tooltip">This should not be shown.</div>
+		</div>
 	</div>
-
-
-
+	<!-- livereload -->
+	<script src="http://localhost:35729/livereload.js"></script>
 	<!-- scripts -->
 	<script src="bower_components/jquery/jquery.min.js"></script>
 	<script src="bower_components/handlebars/handlebars.min.js"></script>
+	<script src="build/templates/result.tmpl.js"></script>
 	<script src="build/js/main.min.js"></script>
-	<!-- livereload -->
-	<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
